# askama_embed_example

./: Cargo.toml
src/: main.rs
templates/: no_embed.html  with_embed.html
templates/no_embed/: images_section.html  news_section.html
templates/partials/: page.html  section.html
