[package]
name = "askama_embed_example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = { git = "https://github.com/YannikSc/askama.git", branch = "feature/embed_block" }
axum = { version = "0.6", features = ["tokio"]}
tokio = { version = "1.33", features = ["full"] }
